src/objects/Leaderboard_Log__c.object
<CustomObject>
    <description>This object is to store the logs for operations like post,reply,Like by Community user.</description>
    <fields>
        <fullName>Action_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the user who has done operation like post question,Reply,like</description>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leaderboard_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is Lookup field to user which represent the Community user</description>
        <label>Community User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leader_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>This will indicate the date on which record is created.</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdeaId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to idea Object which will indicate the id of idea object  which is being posted by community user</description>
        <label>IdeaId</label>
        <referenceTo>Idea</referenceTo>
        <relationshipLabel>Leaderboard Logs</relationshipLabel>
        <relationshipName>Leader_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>This Field will indicate the points given to user for different operations like post,like etc.</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to question Object which will indicate the id of question object  which is being posted by community user or liked by user.</description>
        <label>QuestionId</label>
        <referenceTo>Question</referenceTo>
        <relationshipLabel>Leaderboard Logs</relationshipLabel>
        <relationshipName>Leader_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReplyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to Reply Object which will indicate the id of Reply object  which is being Answered to any Question by community user or liked by user.</description>
        <label>ReplyId</label>
        <referenceTo>Reply</referenceTo>
        <relationshipLabel>Leaderboard Logs</relationshipLabel>
        <relationshipName>Leader_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This Filed will indicate the type of operation performed by user like post,Answer,Like,best reply</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qusetion Post</fullName>
                </value>
                <value>
                    <fullName>Answer Post</fullName>
                </value>
                <value>
                    <fullName>Question Like</fullName>
                </value>
                <value>
                    <fullName>Answer Like</fullName>
                </value>
                <value>
                    <fullName>Best Answer</fullName>
                </value>
                <value>
                    <fullName>Idea Post</fullName>
                </value>
                <value>
                    <fullName>Idea Promote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>leader_board_name__c</fullName>
        <description>This Is the LeaderBoard Log Name Of the record Created</description>
        <formula>&quot;Leader Board Name - &quot; &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leader board name</label>
        <type>Text</type>
    </fields>
    <label>Leaderboard Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_by__c</columns>
        <columns>IdeaId__c</columns>
        <columns>leader_board_name__c</columns>
        <columns>Points__c</columns>
        <columns>QuestionId__c</columns>
        <columns>ReplyId__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leaderboard  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaderboard Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>